fix: landing page performance on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -376,3 +376,10 @@
   overflow: clip;
   object-fit: cover;
 }
+
+@custom-variant ios {
+  /* This is a hack to target iOS devices using CSS. It relies on the fact that only Safari on iOS supports the `-webkit-touch-callout` property */
+  @supports (-webkit-touch-callout: none) {
+    @slot;
+  }
+}
